[workspace]
members = ["rust/*"]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2021"
rust-version = "1.70"  # Keep in sync with README.md and rust-toolchain.toml.
license = "Apache-2.0"

# Shared dependencies that can be inherited.  This just helps a little with
# making sure our crates don't directly depend on different versions of things,
# although we can't help it if our transitive dependencies pull in more.
#
# Each crate can add on specific features freely as it inherits.
[workspace.dependencies]
indexmap.version = "2.2.6"
hashbrown.version = "0.14.0"
# Most of the crates don't need the feature `extension-module`, since only `qiskit-pyext` builds an
# actual C extension (the feature disables linking in `libpython`, which is forbidden in Python
# distributions).  We only activate that feature when building the C extension module; we still need
# it disabled for Rust-only tests to avoid linker errors with it not being loaded.  See
# https://pyo3.rs/main/features#extension-module for more.
pyo3 = { version = "0.21.2", features = ["abi3-py38"] }

# These are our own crates.
dqcmap-accelerate = { path = "rust/accelerate" }
dqcmap-circuit = { path = "rust/circuit" }

[profile.release]
lto = 'fat'
codegen-units = 1
