[project]
name = "dqc-map"
version = "0.1.0"
dependencies = [
    "qiskit==1.1.1",
    "matplotlib==3.9.1",
    "seaborn==0.13.2",
    "qiskit-qasm3-import==0.5.0",
]

[tool.setuptools.packages.find]
include = ["dqcmap"]

[project.entry-points."qiskit.transpiler.layout"]
"dqcmap" = "dqcmap.passes.plugin:DqcMapLayoutPlugin"
