[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "dqc-map"
version = "0.1.0"
dependencies = [
    "qiskit==1.1.1",
    "matplotlib==3.9.1",
    "seaborn==0.13.2",
    "qiskit-qasm3-import==0.5.0",
    "joblib==1.4.2",
    "z3-solver==4.13.0.0",
    "networkx>=3.3",
]

[tool.setuptools.packages.find]
# Pure Python packages/modules
include = ["dqcmap"]

[project.entry-points."qiskit.transpiler.layout"]
"dqcmap" = "dqcmap.passes.plugin:DqcMapLayoutPlugin"

[project.entry-points."qiskit.transpiler.routing"]
"dqcswap" = "dqcmap.passes.plugin:DqcMapRoutePlugin"

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
target = "dqcmap._accelerate"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
                             # but you can add a prefix to nest it inside of a Python package.
path = "rust/pyext/Cargo.toml"      # Default value, can be omitted
binding = "PyO3"         # Default value, can be omitted
